fix: adjust body font size in style.css for improved readability

--- a/public/style.css
+++ b/public/style.css
@@ -219,7 +219,7 @@ body {
   /* top: 50%;
   left: 50%; */
   transform: translate(-50%, -90%);
-  font-size: 2rem;
+  font-size: 1.5rem;
   z-index: 100;
 }
 
